Fixing overflow of percentage

--- a/assets/stylesheets/my_widgets.css
+++ b/assets/stylesheets/my_widgets.css
@@ -1,1 +1,2 @@
-table.queries tr.empty td.count { color: #aaa }
+table.queries tr.empty td.count { color: #aaa; }
+table.list td.progress-cell { white-space: nowrap; padding-right: 2.5em; }
